--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -9,42 +9,47 @@
         android:id="@+id/dialogImageView"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_margin="25dp"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:layout_margin="25dp" />
 
     <com.google.android.material.textview.MaterialTextView
-    android:id="@+id/timeFromText"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="25dp"/>
+        android:id="@+id/timeFromText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:textSize="17sp" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/dialogTimeFrom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:textSize="16sp" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/timeToText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:textSize="17sp" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/dialogTimeTo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:textSize="16sp" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/distanceText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:textSize="17sp" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/dialogDistance"
@@ -52,5 +57,6 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="30dp"/>
+        android:layout_marginBottom="30dp"
+        android:textSize="16sp" />
 </LinearLayout>
